2015-11-28  Simon Pfreundschuh   <simonpf@chalmers.se>

	* arts-2-3-373

	* src/test_matpack.cc: Added explicit conversion in test42(...) to avoid
	warning during compilation. Also added missing return statement for
	test_matrix_vector_multiplication().

2015-11-28  Simon Pfreundschuh   <simonpf@chalmers.se>

	* arts-2-3-372

	* src/lin_alg.cc: Added changes that should have been in the previous
	commit.

2015-11-28  Simon Pfreundschuh   <simonpf@chalmers.se>

	* arts-2-3-371
	
	* CMakeLists.txt: Removed LAPACK requirement.

	* src/lin_alg.*: Reverted ludcmp(...), lubacksub(...), and
	inv(...) to not use LAPACK since Hudson build failed.

2015-11-28  Simon Pfreundschuh   <simonpf@chalmers.se>

	* arts-2-3-370
	
	* CMakeLists.txt: Added LAPACK requirement.

	* src/blas.h: Added declaration for dgemv_

	* src/lapack.h: Header file with LAPACK function declarations.

	* src/lin_alg.*: Changed ludcmp(...), lubacksub(...), solve(...) and
	inv(...) to use LAPACK. This involved changing the ludcmp interface to
	require a reference to a Matrix object to be passed instead of a
	MatrixView.

	* src/matpackI.h: Added mult(...), mult_general(...), ludcmp(...),
	lubacksub(...) and inv(...) to the friends of the ConstMatrixView class

	* src/matpackI.cc: Changed matrix vector multiplication to use BLAS.

	* src/oem.*: Added more detailed timings.

	* src/test_linalg.cc: Added randomized testing for solve(...) and inv(...)

	* src/test_matpack.cc: Changed name of maximum_err(...) function.
	
	* src/test_oem.cc: Changed name of maximum_err(...) function.

	* src/test_utils.cc: Changed name of maximum_err(...) function to
	get_maximum_error(...) and added function to create random, positive
	definite matrices.

	* src/timings.*: Timings class that holds a set of timers to simplify
	profiling.

2015-11-26  Richard Larsson   <ric.larsson@gmail.com>

	* arts-2-3-369
	
	Added "strength" as option for "from propmat" wind jacobians.