@@ -1,3 +1,13 @@
+2015-11-30  Oliver Lemke  <olemke@core-dump.info>
+
+	* arts-2-3-374
+
+	* src/oem.cc, src/timings.h:
+
+	Include arts_omp.h instead of omp.h. Fixes compilation with clang.
+
+	* src/CMakeLists.txt: Remove forced dependency on gfortran library.
+
 2015-11-28  Simon Pfreundschuh   <simonpf@chalmers.se>
 
 	* arts-2-3-373
